--- a/src/scss/feature/index/_category.scss
+++ b/src/scss/feature/index/_category.scss
@@ -44,46 +44,92 @@
   }
   .article-item {
     position: relative;
+    .article-img {
+      overflow: hidden;
+    }
     img {
       object-fit: cover;
+      transition: transform 0.3s;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
     &.article-item-large {
+      width: 440px;
       img {
-        width: 440px;
-        height: 605px;
+        height: 290px;
+        width: 100%;
       }
       .article-desc {
-        bottom: 0;
-        left: 0;
-        padding: 22px;
+        overflow: hidden;
+        height: 315px;
+        width: 100%;
+        border-width: 20px 30px 20px 25px;
+
+        .article-date {
+          font-size: 12px;
+          font-weight: 500;
+          margin-bottom: 13px;
+          letter-spacing: 1px;
+        }
+        .article-title {
+          overflow: hidden;
+          font-size: 24px;
+          line-height: 33px;
+          font-weight: 700;
+          height: 100px;
+          margin-bottom: 15px;
+        }
+
+        .article-content {
+          font-size: 12px;
+          font-weight: 500;
+          line-height: 27px;
+          margin-bottom: 13px;
+          letter-spacing: 2px;
+        }
       }
     }
     &.article-item-small {
+      width: 320px;
       img {
-        width: 320px;
-        height: 290px;
+        height: 213px;
+        width: 100%;
+      }
+
+      .article-date {
+        display: none;
       }
       .article-desc {
-        bottom: 0;
-        left: 0;
-        padding: 16px;
+        overflow: hidden;
+        height: 77px;
+        width: 100%;
+        border-width: 15px 20px;
+        .article-title {
+          font-size: 20px;
+          line-height: 25px;
+          font-weight: 700;
+        }
+      }
+
+      .article-content {
+        display: none;
       }
     }
   }
   .article-desc {
-    position: absolute;
-    text-shadow: map-get($map: $color, $key: black) 3px 3px 5px;
-    color: map-get($map: $color, $key: white);
+    border-style: solid;
+    border-color: map-get($map: $color, $key: gray);
+    background-color: map-get($map: $color, $key: gray);
+
     .article-date {
-      font-size: 12px;
-      font-weight: 500;
-      margin-bottom: 13px;
-      letter-spacing: 2px;
+      color: map-get($map: $color, $key: dark-gray);
     }
     .article-title {
-      font-size: 24px;
-      line-height: 26px;
-      font-weight: 500;
+      color: map-get($map: $color, $key: fashion);
+    }
+    .article-content {
+      color: map-get($map: $color, $key: dark-gray);
     }
   }
 
@@ -157,55 +203,95 @@
       letter-spacing: 0.45vw;
     }
   }
-  .article-list {
-    height: 50.2vw;
-  }
+
   .article-item {
     position: relative;
+    .article-img {
+      overflow: hidden;
+    }
     img {
       object-fit: cover;
+      transition: transform 0.3s;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
     &.article-item-large {
       width: 38.9%;
-      height: 50.2vw;
       img {
         width: 100%;
-        height: 100%;
+        height: 21vw;
       }
       .article-desc {
-        bottom: 0;
-        left: 0;
-        padding: 22px;
+        overflow: hidden;
+        height: 23.1vw;
+        width: 100%;
+        border-width: 1.4vw 1.8vw 2vw 1.8vw;
+
+        .article-date {
+          font-size: 0.8vw;
+          font-weight: 500;
+          margin-bottom: 1vw;
+          letter-spacing: 1px;
+        }
+        .article-title {
+          overflow: hidden;
+          font-size: 1.7vw;
+          line-height: 2.4vw;
+          font-weight: 700;
+          height: 7.2vw;
+          margin-bottom: 1.2vw;
+        }
+
+        .article-content {
+          font-size: 0.8vw;
+          font-weight: 500;
+          line-height: 1.9vw;
+          letter-spacing: 2px;
+        }
       }
     }
     &.article-item-small {
       width: 48.1%;
-      height: 24.1vw;
       img {
         width: 100%;
-        height: 100%;
+        height: 15.4vw;
       }
+
+      .article-date {
+        display: none;
+      }
+
       .article-desc {
-        bottom: 0;
-        left: 0;
-        padding: 16px;
+        overflow: hidden;
+        height: 5.6vw;
+        width: 100%;
+        border-width: 1vw 1.5vw;
+        .article-title {
+          font-size: 1.47vw;
+          line-height: 1.9vw;
+          font-weight: 700;
+        }
+      }
+
+      .article-content {
+        display: none;
       }
     }
   }
   .article-desc {
-    position: absolute;
-    text-shadow: map-get($map: $color, $key: black) 3px 3px 5px;
-    color: map-get($map: $color, $key: white);
+    border-style: solid;
+    border-color: map-get($map: $color, $key: gray);
+    background-color: map-get($map: $color, $key: gray);
+
     .article-date {
-      font-size: 1.5vw;
-      font-weight: 500;
-      letter-spacing: 1px;
-      margin-bottom: 0.9vw;
+      color: map-get($map: $color, $key: dark-gray);
     }
     .article-title {
-      font-size: 1.8vw;
-      line-height: 2vw;
-      font-weight: 500;
+      color: map-get($map: $color, $key: fashion);
+    }
+    .article-content {
+      color: map-get($map: $color, $key: dark-gray);
     }
   }
 
@@ -262,16 +348,19 @@
     margin-bottom: 18px;
     width: 100%;
     height: 33.4vw;
-    img {
+    .article-img {
       width: 50%;
       height: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
     .article-desc {
       width: 50%;
-      border-top: 5vmin solid map-get($map: $color, $key: white);
-      border-right: 5vmin solid map-get($map: $color, $key: white);
-      border-bottom: 5vmin solid map-get($map: $color, $key: white);
-      border-left: 4.6vmin solid map-get($map: $color, $key: white);
+      border-width: 5vmin 5vmin 5vmin 4.6vmin;
+      border-style: solid;
+      border-color: map-get($map: $color, $key: white);
       background-color: map-get($map: $color, $key: white);
       overflow: hidden;
       .article-date {
