--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -1,5 +1,10 @@
+/* RWD */
 $desktop-min-width: 1366px;
 $tablet-min-width: 767px;
+
+/* boostap - RWD */
+$boostrap-desktop-min-width: 992px;
+$boostrap-tablet-min-width: 767px;
 
 $header-height-pc: 130px;
 $header-height-mobile: 70px;
