--- a/src/scss/theme-rwd.scss
+++ b/src/scss/theme-rwd.scss
@@ -55,3 +55,23 @@
   @include hotvideo-Mobile;
   @include expert-Mobile;
 }
+
+@include boostrap-response(PC) {
+  @include sidebar-PC;
+}
+
+@include boostrap-response(PC-Tablet) {
+  @include sidebar-PC-Tablet;
+}
+
+@include boostrap-response(Tablet) {
+  @include sidebar-Tablet;
+}
+
+@include boostrap-response(Tablet-Mobile) {
+  @include sidebar-Tablet-Mobile;
+}
+
+@include boostrap-response(Mobile) {
+  @include sidebar-Mobile;
+}
