--- a/src/scss/feature/sidebar/_sidebar.scss
+++ b/src/scss/feature/sidebar/_sidebar.scss
@@ -20,6 +20,7 @@
       letter-spacing: 1vw;
       font-weight: 300;
       margin: 8.8vw auto;
+      padding: 0;
     }
     .list-unstyled > li > a {
       padding: 0;
@@ -32,19 +33,22 @@
       height: 33.4vw;
       margin-bottom: 3vw;
       padding-bottom: 0;
-    }
-  }
-  .post-cover {
-    width: 50%;
-    height: 100%;
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
+      a {
+        width: 50%;
+        height: 100%;
+
+        max-width: initial !important;
+        margin-right: 0 !important;
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
   .post-content {
-    width: 50%;
+    width: 50% !important;
     border-width: 5vmin 5vmin 5vmin 4.6vmin;
     border-style: solid;
     border-color: map-get($map: $color, $key: white);
