--- a/src/scss/feature/index/_category.scss
+++ b/src/scss/feature/index/_category.scss
@@ -122,13 +122,13 @@
     background-color: map-get($map: $color, $key: gray);
 
     .article-date {
-      color: map-get($map: $color, $key: dark-gray);
+      color: map-get($map: $color, $key: black);
     }
     .article-title {
       color: map-get($map: $color, $key: fashion);
     }
     .article-content {
-      color: map-get($map: $color, $key: dark-gray);
+      color: map-get($map: $color, $key: black);
     }
   }
 
@@ -283,13 +283,13 @@
     background-color: map-get($map: $color, $key: gray);
 
     .article-date {
-      color: map-get($map: $color, $key: dark-gray);
+      color: map-get($map: $color, $key: black);
     }
     .article-title {
       color: map-get($map: $color, $key: fashion);
     }
     .article-content {
-      color: map-get($map: $color, $key: dark-gray);
+      color: map-get($map: $color, $key: black);
     }
   }
 
