update layout structure

--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -8,11 +8,4 @@
 
 // index
 @import "./feature/_index.scss";
-@import "./feature/index/_promote.scss";
-@import "./feature/index/_news.scss";
-@import "./feature/index/_category.scss";
-@import "./feature/index/_hotvideo.scss";
-@import "./feature/index/_expert.scss";
-
-// sidebar
-@import "./feature/sidebar/_sidebar.scss";
+@import "./feature/index/_banner.scss";
