--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -7,8 +7,4 @@
 @include header;
 @include footer;
 @include index;
-@include promote;
-@include news;
-@include category;
-@include hotvideo;
-@include expert;
+@include banner;
