--- a/src/scss/main/_reset.scss
+++ b/src/scss/main/_reset.scss
@@ -13,7 +13,7 @@ body {
 }
 * {
   box-sizing: border-box;
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Myriad Pro", sans-serif;
 }
 button {
   border: none;
