--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -10,3 +10,7 @@
 // index
 @import "./feature/_index.scss";
 @import "./feature/index/_banner.scss";
+@import "./feature/index/_intro.scss";
+@import "./feature/index/_product.scss";
+@import "./feature/index/_news.scss";
+@import "./feature/index/_contact.scss";
