--- a/src/scss/feature/_footer.scss
+++ b/src/scss/feature/_footer.scss
@@ -125,7 +125,7 @@
     font-size: 1.05vw;
     .icon-plus,
     .icon-minus {
-      display: none;
+      display: none !important;
     }
   }
 }
@@ -223,14 +223,19 @@
       justify-content: space-between;
       align-items: center;
       .icon-minus {
-        display: none;
+        display: none !important;
+        width: 16px;
       }
+      .icon-minus {
+        width: 16px;
+      }
+
       &[data-expanded="true"] {
         .icon-plus {
-          display: none;
+          display: none !important;
         }
         .icon-minus {
-          display: inline;
+          display: inline !important;
         }
       }
     }
