--- a/src/scss/feature/index/_product.scss
+++ b/src/scss/feature/index/_product.scss
@@ -4,7 +4,7 @@
 }
 @mixin product-PC-Tablet {
   .product {
-    margin: 0 16.3vw;
+    margin: 0 16.3vw 3.9vw 16.3vw;
   }
   .product-title {
     text-align: center;
