--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -31,13 +31,14 @@ $color: (
   opacity-75: rgba(0, 0, 0, 0.75),
   opacity-w-15: rgba(255, 255, 255, 0.15),
   gray: #eaeaea,
+  suger-cane: #e9e9e7,
+  french-gray: #bebfc2,
   nobel: #9f9f9f,
   dark-gray: #57585e,
-  orange: #ea5432,
-  suger-cane: #e9e9e7,
-  white: #fff,
   thunder: #231f20,
   black: #000,
+  orange: #ea5432,
+  white: #fff,
 );
 
 $z-index: (
