--- a/src/scss/feature/index/_product.scss
+++ b/src/scss/feature/index/_product.scss
@@ -7,6 +7,7 @@
     margin: 0 16.3vw 3.9vw 16.3vw;
   }
   .product-title {
+    color: color(dark-gray);
     text-align: center;
     padding: 2.7vw 0;
     font-size: 3.1vw;
