--- a/src/scss/idah-solution.scss
+++ b/src/scss/idah-solution.scss
@@ -2,6 +2,128 @@
 @include response(PC) {
 }
 @include response(PC-Tablet) {
+  .solution {
+    margin: 0 16.3vw 2vw 16.3vw;
+  }
+  .solution-title {
+    color: color(dark-gray);
+    text-align: center;
+    padding: 2.7vw 0;
+    font-size: 3.1vw;
+    font-weight: 500;
+  }
+  .solution-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 12.15vw;
+    grid-auto-flow: row dense;
+    grid-gap: 1.6vw;
+    .solution-item {
+      display: flex;
+      .solution-intro {
+        flex-grow: 1;
+        background: color(french-gray);
+        color: color(dark-gray);
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .solution-topic {
+          font-size: 1.4vw;
+          font-weight: 400;
+          padding: 1.7vw 1.6vw 1vw 1.6vw;
+          position: relative;
+          &::after {
+            content: "";
+            bottom: 0;
+            left: 1.6vw;
+            position: absolute;
+            border-bottom: 1px solid color(orange);
+            width: 3.7vw;
+          }
+        }
+        .solution-desc {
+          overflow: hidden;
+          flex-grow: 1;
+          font-size: 0.82vw;
+          line-height: 1.2vw;
+          font-weight: 400;
+          padding: 1vw 4.4vw 0 1.6vw;
+        }
+        .solution-icon-plus {
+          align-self: flex-end;
+          padding: 0 1vw 1vw 0;
+          img {
+            width: 1.4vw;
+          }
+        }
+      }
+      .solution-img {
+        img {
+          object-fit: cover;
+          height: 12.15vw;
+        }
+      }
+      &:nth-child(6n-5) {
+        grid-area: auto / auto / auto / span 2;
+        .solution-intro .solution-desc {
+          max-height: 5.7vw;
+        }
+        .solution-img img {
+          width: 22.7vw;
+        }
+      }
+      &:nth-child(6n-4) {
+        grid-area: auto / auto / auto / span 2;
+        flex-direction: row-reverse;
+        .solution-intro .solution-desc {
+          max-height: 5.7vw;
+        }
+        .solution-img img {
+          width: 21.1vw;
+        }
+      }
+      &:nth-child(6n-3) {
+        grid-area: auto / auto / span 2 / auto;
+        flex-direction: column;
+        .solution-intro .solution-desc {
+          max-height: 7.4vw;
+        }
+        .solution-img img {
+          width: 100%;
+        }
+      }
+      &:nth-child(6n-2) {
+        grid-area: auto / auto / span 2 / auto;
+        flex-direction: column;
+        .solution-intro .solution-desc {
+          max-height: 7.4vw;
+        }
+        .solution-img img {
+          width: 100%;
+        }
+      }
+      &:nth-child(6n-1) {
+        grid-area: auto / auto / auto / span 2;
+        flex-direction: row-reverse;
+        .solution-intro .solution-desc {
+          max-height: 5.7vw;
+        }
+        .solution-img img {
+          width: 22.7vw;
+        }
+      }
+      &:nth-child(6n) {
+        grid-area: auto / auto / auto / span 2;
+        .solution-intro .solution-desc {
+          max-height: 5.7vw;
+        }
+        .solution-img img {
+          width: 21.1vw;
+        }
+      }
+    }
+  }
 }
 @include response(Tablet) {
 }
