--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -31,6 +31,7 @@ $color: (
   opacity-75: rgba(0, 0, 0, 0.75),
   opacity-w-15: rgba(255, 255, 255, 0.15),
   gray: #eaeaea,
+  athens-gray: #ececee,
   suger-cane: #e9e9e7,
   french-gray: #bebfc2,
   nobel: #9f9f9f,
