--- a/src/scss/feature/index/_news.scss
+++ b/src/scss/feature/index/_news.scss
@@ -22,34 +22,58 @@
   }
   .idah-news-item {
     display: flex;
+    width: 49.1%;
     .idah-news-article {
-      width: 16.4vw;
-      height: 16.4vw;
+      position: relative;
+      flex-basis: 50%;
       background: color(athens-gray);
+      padding: 1.3vw 1.6vw 1.3vw 1.3vw;
+      color: color(dark-gray);
+      display: flex;
+      flex-direction: column;
       .idah-news-date {
         font-size: 0.82vw;
         line-height: 1.2vw;
         font-weight: 400;
+        padding-bottom: 0.4vw;
       }
       .idah-news-topic {
         font-size: 1.2vw;
+        line-height: 1.5vw;
+        padding-bottom: 0.7vw;
       }
       .idah-news-desc {
         font-size: 0.82vw;
         line-height: 1.2vw;
         font-weight: 400;
+        padding-bottom: 2.6vw;
       }
       .idah-news-read-more {
+        position: absolute;
+        bottom: 1.3vw;
         font-size: 0.82vw;
-        line-height: 1.2vw;
         font-weight: 400;
+        display: flex;
+        align-items: center;
+        img {
+          width: 0.4vw;
+          margin-right: 0.4vw;
+        }
       }
     }
-    .idah-news-img {
-      img {
-        object-fit: cover;
-        width: 16.4vw;
-        height: 16.4vw;
+    .idah-news-img-box {
+      flex-basis: 50%;
+      position: relative;
+      height: auto;
+      .idah-news-img {
+        z-index: 0;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-size: cover;
+        background-position: center;
       }
     }
   }
