--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -32,6 +32,7 @@ $color: (
   opacity-w-15: rgba(255, 255, 255, 0.15),
   gray: #eaeaea,
   athens-gray: #ececee,
+  iron: #dcdddf,
   suger-cane: #e9e9e7,
   french-gray: #bebfc2,
   nobel: #9f9f9f,
