--- a/src/scss/feature/index/_news.scss
+++ b/src/scss/feature/index/_news.scss
@@ -117,4 +117,107 @@
 @mixin news-Tablet-Mobile {
 }
 @mixin news-Mobile {
+  .idah-news-title {
+    color: color(dark-gray);
+    text-align: center;
+    padding: 2.7vw 0;
+    font-size: 9.8vw;
+    font-weight: 500;
+  }
+  .idah-news-slide {
+    padding-bottom: 5.5vw;
+    border-bottom: 1px solid color(dark-gray);
+    margin-bottom: 3.7vw;
+  }
+  .idah-news-item {
+    display: flex;
+    flex-direction: column;
+    .idah-news-article {
+      position: relative;
+      flex-basis: 50%;
+      background: color(athens-gray);
+      padding: 1.3vw 1.6vw 1.3vw 1.3vw;
+      color: color(dark-gray);
+      display: flex;
+      flex-direction: column;
+      .idah-news-date {
+        font-size: 0.82vw;
+        line-height: 1.2vw;
+        font-weight: 400;
+        padding-bottom: 0.4vw;
+      }
+      .idah-news-topic {
+        font-size: 1.2vw;
+        line-height: 1.5vw;
+        padding-bottom: 0.7vw;
+      }
+      .idah-news-desc {
+        font-size: 0.82vw;
+        line-height: 1.2vw;
+        font-weight: 400;
+        padding-bottom: 2.6vw;
+      }
+      .idah-news-read-more {
+        position: absolute;
+        bottom: 1.3vw;
+        font-size: 0.82vw;
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        img {
+          width: 0.4vw;
+          margin-right: 0.4vw;
+        }
+      }
+    }
+    .idah-news-img-box {
+      flex-basis: 50%;
+      position: relative;
+      height: auto;
+      .idah-news-img {
+        z-index: 0;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-size: cover;
+        background-position: center;
+      }
+    }
+  }
+
+  .idah-share {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 13.1vw;
+    .idah-share-social {
+      color: color(dark-gray);
+      display: flex;
+      align-items: center;
+      .idah-share-social-title {
+        font-size: 1.02vw;
+        line-height: 1.2vw;
+        font-weight: 400;
+      }
+      .idah-share-social-arrow {
+        padding: 0 0.6vw;
+        img {
+          width: 0.3vw;
+        }
+      }
+      i {
+        font-size: 1.5vw;
+        padding: 0 0.6vw;
+      }
+    }
+    .idah-share-btn-back {
+      color: color(orange);
+      font-size: 0.82vw;
+      line-height: 1.2vw;
+      font-weight: 400;
+      padding: 0.4vw 2.4vw;
+      border: 1px solid color(orange);
+    }
+  }
 }
