--- a/src/scss/feature/index/_news.scss
+++ b/src/scss/feature/index/_news.scss
@@ -22,7 +22,7 @@
   }
   .idah-news-item {
     display: flex;
-    width: 49.1%;
+    min-height: 16.7vmax;
     .idah-news-article {
       position: relative;
       flex-basis: 50%;
@@ -120,60 +120,69 @@
   .idah-news-title {
     color: color(dark-gray);
     text-align: center;
-    padding: 2.7vw 0;
+    padding: 4.3vw 0 7vw 0;
     font-size: 9.8vw;
     font-weight: 500;
   }
   .idah-news-slide {
-    padding-bottom: 5.5vw;
-    border-bottom: 1px solid color(dark-gray);
-    margin-bottom: 3.7vw;
+    padding-bottom: 15.5vw;
+    position: relative;
+    .nav-btn {
+      color: color(dark-gray);
+      position: absolute;
+      font-size: 8vw;
+      font-weight: lighter;
+      top: 45%;
+      transform: scaleY(2);
+    }
+    .nav-prev {
+      left: 3vw;
+    }
+    .nav-next {
+      right: 3vw;
+    }
   }
   .idah-news-item {
     display: flex;
     flex-direction: column;
+    width: 77vw;
+    margin: 0 auto;
     .idah-news-article {
       position: relative;
       flex-basis: 50%;
       background: color(athens-gray);
-      padding: 1.3vw 1.6vw 1.3vw 1.3vw;
+      padding: 8vw 1.6vw 6.5vw 8vw;
       color: color(dark-gray);
       display: flex;
       flex-direction: column;
       .idah-news-date {
-        font-size: 0.82vw;
-        line-height: 1.2vw;
-        font-weight: 400;
-        padding-bottom: 0.4vw;
+        font-size: 4.3vw;
+        line-height: 4.3vw;
+        font-weight: 200;
+        padding-bottom: 4vw;
       }
       .idah-news-topic {
-        font-size: 1.2vw;
-        line-height: 1.5vw;
-        padding-bottom: 0.7vw;
+        font-size: 5vw;
+        line-height: 6vw;
+        padding-bottom: 6vw;
       }
       .idah-news-desc {
-        font-size: 0.82vw;
-        line-height: 1.2vw;
-        font-weight: 400;
-        padding-bottom: 2.6vw;
+        display: none;
       }
       .idah-news-read-more {
-        position: absolute;
-        bottom: 1.3vw;
-        font-size: 0.82vw;
+        font-size: 4.3vw;
         font-weight: 400;
         display: flex;
         align-items: center;
         img {
-          width: 0.4vw;
+          width: 2.2vw;
           margin-right: 0.4vw;
         }
       }
     }
     .idah-news-img-box {
-      flex-basis: 50%;
       position: relative;
-      height: auto;
+      height: 75.8vw;
       .idah-news-img {
         z-index: 0;
         position: absolute;
@@ -189,35 +198,36 @@
 
   .idah-share {
     display: flex;
-    justify-content: space-between;
-    padding-bottom: 13.1vw;
+    flex-direction: column-reverse;
+    padding-bottom: 15.1vw;
+    align-items: center;
     .idah-share-social {
       color: color(dark-gray);
       display: flex;
       align-items: center;
       .idah-share-social-title {
-        font-size: 1.02vw;
+        font-size: 5vw;
         line-height: 1.2vw;
         font-weight: 400;
       }
       .idah-share-social-arrow {
-        padding: 0 0.6vw;
+        padding: 0 2.4vw;
         img {
-          width: 0.3vw;
+          width: 1.6vw;
         }
       }
       i {
-        font-size: 1.5vw;
-        padding: 0 0.6vw;
+        font-size: 8.2vw;
+        padding: 0 2.6vw;
       }
     }
     .idah-share-btn-back {
       color: color(orange);
-      font-size: 0.82vw;
-      line-height: 1.2vw;
+      font-size: 5vw;
       font-weight: 400;
-      padding: 0.4vw 2.4vw;
+      padding: 3vw 11.5vw;
       border: 1px solid color(orange);
+      margin-bottom: 15.5vw;
     }
   }
 }
